# viznoir

./: .all-contributorsrc  .allcontributorsrc  .coverage  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cpu  LICENSE  Makefile  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.zh.md  SECURITY.md  codecov.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  release-please-config.json  server.json  smithery.yaml
.claude-plugin/: plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: auto-merge.yml  ci.yml  dependency-review.yml  deploy.yml  pr-quality.yml  publish-mcp.yml  publish.yml  release-drafter.yml  release-please.yml  scorecard.yml  security.yml  welcome.yml
agents/: mesh-agent.md  viz-agent.md
benchmarks/: bench_render.py
commands/: mechkit.md  parapilot.md
docs/: OSS_STRATEGY.md  api-stability.md  awesome-mcp-servers-entry.md  cinematic-rendering-spec.md  contributing.md  gallery.md  index.md  migration-0.x-to-1.0.md  troubleshooting.md  user-scenarios-and-features.md
paper/: paper.md
scripts/: gen_tool_reference.py  generate_showcase.py
tests/: conftest.py  test_deprecation.py  test_docs.py  test_plugins.py  test_presets.py  test_prompts.py  test_property.py  test_remote.py  test_remote_vtk.py  test_resources.py
www/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
(+270 files in other folders)
